deploy/base/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: default
  labels:
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: the-app
        ports:
        - containerPort: 80
          name: http
        resources:
          requests:
            memory: "200Mi"
            cpu: "250m"
          limits:
            memory: "2048Mi"
            cpu: "2000m"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 30
        readynessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 3
