deploy/base/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: default
  labels:
    app: app-service
spec:
  ports:
    - port: 80
  selector:
    app: app
  type: LoadBalancer
