deploy/base/redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: ${NAMESPACE}
  labels:
    app: redis-service
spec:
  ports:
    - port: 6379
  selector:
    app: redis
  type: LoadBalancer
