deploy/base/app-ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: "app-ingress"
  namespace: ${NAMESPACE}
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
spec:
  rules:
    - host: ${TRAEFIK_HOSTNAME}
      http:
        paths:
          - path: /
            backend:
              serviceName: app-service
              servicePort: 80
